Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124197

a11y: Report QAccessible::Help as HelpText AT-SPI property

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.0 FF
    • 6.6.3
    • None
    • Fedora Rawhide with libatspi 2.52, qtbase 6.6.3 self-compiled from git
    • Linux/Wayland, Linux/X11
    • 353dd10a1 (dev)

      Qt has a QAccessible::Help  enum value for text. Quoting https://doc.qt.io/qt-6/qaccessible.html#Text-enum : "A longer text giving information about how to use the object."

      However, this is currently not bridged to/reported on the AT-SPI platform level on Linux.

      AT-SPI2 got a HelpText attribute a few months ago:

      https://gitlab.gnome.org/GNOME/at-spi2-core/-/commit/8f1c70155b4132de2c567b3034e4f242e0450df5

       

      Steps to reproduce:

      0) run a system that has libatspi version >= 2.52 (e.g. current Fedora Rawhide; for the API added in the above -mentioned at-spi2-core commit to be available in step 4)

      1) build and run the attached sample program

      2) start Accerciser ( https://gitlab.gnome.org/GNOME/accerciser )

      3) in Accerciser's treeview of the sample application's a11y tree, select the button

      4) query the HelpText accessible attribute via Accerciser's IPython console:

      In [1]: acc.get_help_text()
      

      Actual result:

      No help text gets returned, even though the WhatsThis text was set for the button, and that gets used as QAccessible::Help text Qt-internally:

      In [1]: acc.get_help_text()
      In [2]: acc.get_help_text() == None
      Out[2]: True 

      Expected result:

      The WhatsThis text should be reported as help text. Output with a local change in place (I will submit that one to Gerrit):

      In [3]: acc.get_help_text()
      Out[3]: 'Some WhatsThis text that gets used as the accessible help text'
      

        1. main.cpp
          0.6 kB
          Michael Weghorn
        For Gerrit Dashboard: QTBUG-124197
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            michaelweghorn Michael Weghorn
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes