a11y atspi: Bridge help text to AT-SPI

at-spi2-core commit [1]

    commit 8f1c70155b4132de2c567b3034e4f242e0450df5
    Author: Mike Gorse <mgorse@suse.com>
    Date:   Wed Jan 3 16:52:31 2024 -0600

        Add HelpText property and corresponding functions in atk and libatspi.

        Closes #146

added a HelpText property to AT-SPI2. Qt already has
a corresponding QAccessible::Help, so report that
as the HelpText property in the AT-SPI adaptor.

[1] https://gitlab.gnome.org/GNOME/at-spi2-core/-/commit/8f1c70155b4132de2c567b3034e4f242e0450df5

Fixes: QTBUG-124197
Change-Id: I01489c1fdac953658d379951207f91784f3d1dfe
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>